--- a/static/index.html
+++ b/static/index.html
@@ -23,9 +23,10 @@
 <body>
     <canvas id="glcanvas" tabindex='1'></canvas>
     <script src="./mq_js_bundle.js"></script>
-    <!-- <script src="./sapp_jsutils.js"></script> -->
-    <!-- <script src="./macroquad-gamepads-0.1.js"></script> -->
-    <!-- <script src="./quad-storage.js"></script> -->
+    <script src="./sapp_jsutils.js"></script>
+    <script src="./macroquad-gamepads-0.1.js"></script>
+    <script src="./quad-storage.js"></script>
+    <!-- <script src="./quad-net.js"></script> -->
     <script>load("tron-io.wasm");</script>
 </body>
 
