Refactor into workspace: [client, server, world]

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Transport IO</title>
+    <title>Tron-IO</title>
     <style>
         html,
         body,
@@ -27,7 +27,7 @@
     <script src="./macroquad-gamepads-0.1.js"></script>
     <script src="./quad-storage.js"></script>
     <!-- <script src="./quad-net.js"></script> -->
-    <script>load("tron-io.wasm");</script>
+    <script>load("tron-io-client.wasm");</script>
 </body>
 
 </html>
